# sistema-domotico

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lab8.vcxproj  lab8.vcxproj.filters  sistema-domotico.sln
.cache/clangd/index/: device.cc.FE47C7CC27B837B1.idx  domotics_system.cc.C052DF9029A98973.idx  main.cc.78D7B343A1DB8CCA.idx  manual_device.cc.985C17D7A43F687F.idx  prefixed_cycle_device.cc.4FB33E1399CCCAB3.idx  time.cc.C9CE16F68626760F.idx  time.h.816B0F25303C5C70.idx
assets/: devices.json
include/: cp_device.h  device.h  domotics_system.h  log.h  manual_device.h  singleton_id.h  terminal.h  time.h
lab8.dir/Debug/: lab8.exe.recipe  lab8.ilk
lab8.dir/Debug/lab8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  lab8.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: cp_device.cc  device.cc  domotics_system.cc  log.cc  main.cc  manual_device.cc  singleton_id.cc  terminal.cc  terminal_run.cc  time.cc
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
